--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
     systemProperty 'sut.url', System.getProperty('sut.url', 'http://localhost:3333')
-    systemProperty 'db.user', System.getProperty('db.user', 'app')
+    systemProperty 'db.user', System.getProperty('db.username', 'app')
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
     systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+
 }
