--- a/build.gradle
+++ b/build.gradle
@@ -23,24 +23,21 @@ repositories {
 }
 
 dependencies {
-    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
-    implementation 'com.codeborne:selenide:6.6.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'com.codeborne:selenide:5.19.0'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.qameta.allure:allure-selenide:2.16.1'
     testImplementation 'mysql:mysql-connector-java:8.0.29'
-    testImplementation 'org.postgresql:postgresql:42.3.6'
-    implementation 'commons-dbutils:commons-dbutils:1.7'
-    testImplementation 'io.rest-assured:rest-assured:5.1.1'
-    implementation 'com.github.javafaker:javafaker:1.0.2'
-    implementation 'io.qameta.allure:allure-selenide:2.18.1'
-    testImplementation 'org.slf4j:slf4j-simple:1.7.36'
+    testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'org.postgresql:postgresql:42.2.14'
 
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-    systemProperty 'sut.url', System.getProperty('sut.url', 'http://localhost:3333')
-    systemProperty 'db.user', System.getProperty('db.username', 'app')
-    systemProperty 'db.password', System.getProperty('db.password', 'pass')
     systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'db.username', System.getProperty('db.username', 'app')
+    systemProperty 'db.password', System.getProperty('db.password', 'pass')
 
 }
